--- a/Onyx-Editor/Onyx-Editor.csproj
+++ b/Onyx-Editor/Onyx-Editor.csproj
@@ -68,8 +68,6 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="src\OnyxEditor\Engine\EngineCore.cs" />
-    <Compile Include="src\OnyxEditor\Engine\EngineInput.cs" />
-    <Compile Include="src\OnyxEditor\Engine\EngineRenderer.cs" />
     <Compile Include="src\OnyxEditor\Engine\Input\Input.cs" />
     <Compile Include="src\OnyxEditor\Engine\Input\Keycodes.cs" />
     <Compile Include="src\OnyxEditor\Engine\Input\MouseCodes.cs" />
@@ -83,20 +81,11 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="src\OnyxEditor\UI\OnyxMenuHeader.cs" />
-    <Compile Include="src\OnyxEditor\UI\RenderSurfaceTest\EmbeddedWindow.xaml.cs" />
-    <Compile Include="src\OnyxEditor\UI\Viewport\RendererSurface.cs" />
-    <Page Include="src\OnyxEditor\UI\RenderSurfaceTest\EmbeddedWindow.xaml">
+    <Compile Include="src\OnyxEditor\UI\Viewport\EmbeddedWindow.xaml.cs" />
+    <Page Include="src\OnyxEditor\UI\Viewport\EmbeddedWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="src\OnyxEditor\UI\Viewport\Viewport.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Compile Include="src\OnyxEditor\UI\Viewport\Viewport.xaml.cs">
-      <DependentUpon>Viewport.xaml</DependentUpon>
-      <SubType>Code</SubType>
-    </Compile>
     <None Include="src\OnyxEditor\UI\Viewport\viewport_splash.jpg" />
   </ItemGroup>
   <ItemGroup>
