--- a/Onyx/Onyx.vcxproj.filters
+++ b/Onyx/Onyx.vcxproj.filters
@@ -959,6 +959,7 @@
     <ClInclude Include="src\Onyx\Renderer\StaticBatch.h" />
     <ClInclude Include="src\Onyx\Editor\Renderer\EditorRenderer3D.h" />
     <ClInclude Include="src\Onyx\Core\Memory.h" />
+    <ClInclude Include="src\Onyx\Editor\Components\SceneEditorSelector.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Onyx\Audio\Sound.cpp">
@@ -1093,5 +1094,6 @@
     <ClCompile Include="src\Onyx\Renderer\StaticBatch.cpp" />
     <ClCompile Include="src\Onyx\Editor\Renderer\EditorRenderer3D.cpp" />
     <ClCompile Include="src\Onyx\Core\Memory.cpp" />
+    <ClCompile Include="src\Onyx\Editor\Components\SceneEditorSelector.cpp" />
   </ItemGroup>
 </Project>
