--- a/Onyx-CLR/Onyx-CLR.vcxproj
+++ b/Onyx-CLR/Onyx-CLR.vcxproj
@@ -103,6 +103,7 @@ IF EXIST ..\bin\Release-x86_64\Onyx-CLR\Onyx-CLR.dll\ (xcopy /Q /E /Y /I ..\bin\
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\Editor\SceneNodeCLR.h" />
     <ClInclude Include="src\Editor\SceneCLR.h" />
     <ClInclude Include="src\Editor\SceneEditorCLR.h" />
     <ClInclude Include="src\Bitmap\BitmapDirect.h" />
@@ -114,6 +115,7 @@ IF EXIST ..\bin\Release-x86_64\Onyx-CLR\Onyx-CLR.dll\ (xcopy /Q /E /Y /I ..\bin\
     <ClInclude Include="src\pch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Editor\SceneNodeCLR.cpp" />
     <ClCompile Include="src\Editor\SceneCLR.cpp" />
     <ClCompile Include="src\Editor\SceneEditorCLR.cpp" />
     <ClCompile Include="src\AssemblyInfo.cpp" />
