--- a/Onyx/onyx.vcxproj
+++ b/Onyx/onyx.vcxproj
@@ -109,6 +109,7 @@ IF EXIST ..\bin\Release-x86_64\Onyx\Onyx.dll\ (xcopy /Q /E /Y /I ..\bin\Release-
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\Onyx\Scripting\Script.h" />
     <ClInclude Include="src\Onyx\Math\Random.h" />
     <ClInclude Include="src\Onyx\Resources\UUID.h" />
     <ClInclude Include="src\Onyx\Scene\SceneNode.h" />
@@ -415,6 +416,7 @@ IF EXIST ..\bin\Release-x86_64\Onyx\Onyx.dll\ (xcopy /Q /E /Y /I ..\bin\Release-
     <ClInclude Include="vendor\glm\glm\vector_relational.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Onyx\Scripting\Script.cpp" />
     <ClCompile Include="src\Onyx\Math\Random.cpp" />
     <ClCompile Include="src\Onyx\Resources\UUID.cpp" />
     <ClCompile Include="src\Onyx\Scene\SceneNode.cpp" />
