--- a/Onyx/Onyx.vcxproj.filters
+++ b/Onyx/Onyx.vcxproj.filters
@@ -964,6 +964,7 @@
     <ClInclude Include="src\Onyx\Resources\Hasher.h" />
     <ClInclude Include="src\Onyx\Resources\UUID.h" />
     <ClInclude Include="src\Onyx\Scripting\Script.h" />
+    <ClInclude Include="src\Onyx\Renderer\ScreenRenderer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Onyx\Audio\Sound.cpp">
@@ -1103,5 +1104,6 @@
     <ClCompile Include="src\Onyx\Math\Random.cpp" />
     <ClCompile Include="src\Onyx\Resources\UUID.cpp" />
     <ClCompile Include="src\Onyx\Scripting\Script.cpp" />
+    <ClCompile Include="src\Onyx\Renderer\ScreenRenderer.cpp" />
   </ItemGroup>
 </Project>
